# PageBookGenerator

./: .gitignore  README.md
.github/workflows/: ci-cd.yml
doc/: CONFIGURE.md  INSTALL.md  TESTING.md  UPLOAD.md
refman/: generate-refman.sh
src/: README.md  program_launcher.py  pyproject.toml  toml_gen.py
src/page_book_generator/: about.py  main.py  program.py  worker.py
src/page_book_generator/modules/: wabout.py
src/page_book_generator/templates/: complete_head.html  complete_index_en.html  complete_index_es.html  complete_index_pt.html  foot.html  footer_header_en.json  footer_header_es.json  footer_header_pt.json  head.html  index_en.html  index_pt.html  print-only_head.html  print-only_index_en.html  print-only_index_es.html  print-only_index_pt.html
src/page_book_generator/templates/data/: estilo.css
test/: generate.sh  index_data.json
test/complete_index/: bibliography.bib  description.txt  generate.sh  index_data.json
test/print-only_index/: description.txt  generate.sh  index_data.json
